Use SpecialEncodeISOArray instead of disabling compact headers